[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
thiserror = "1.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
ring = "0.16.20"
clap = { version = "2.33.3", optional = true }

[features]
cli = ["clap"]
debugging = []

[lib]
name = "p2p_handshake"
path = "src/lib.rs"

[[bin]]
name = "p2p-handshake-server"
path = "src/server.rs"
required-features = ["cli"]

[[example]]
name = "text-chat"
required-features = ["cli"]
